--- a/Fish-ShapedBunMakingGame/GameEndView/GameEndViewController.xib
+++ b/Fish-ShapedBunMakingGame/GameEndView/GameEndViewController.xib
@@ -7,7 +7,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameEndViewController" customModule="Fish_ShapedBunMakingGame" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameEndViewController" customModule="Fish_ShapedBunMakingGame" customModuleProvider="target">
+            <connections>
+                <outlet property="scoreLabel" destination="Gjc-jY-e1v" id="ybG-Po-JuV"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="hGa-jy-X0F">
             <rect key="frame" x="0.0" y="0.0" width="750" height="400"/>
