--- a/Fish-ShapedBunMakingGame/GameEndView/GameEndViewController.xib
+++ b/Fish-ShapedBunMakingGame/GameEndView/GameEndViewController.xib
@@ -1,70 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina6_12" orientation="landscape" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameEndViewController" customModule="Fish_ShapedBunMakingGame" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameEndViewContoller" customModule="Fish_ShapedBunMakingGame" customModuleProvider="target">
             <connections>
-                <outlet property="scoreLabel" destination="Gjc-jY-e1v" id="ybG-Po-JuV"/>
+                <outlet property="scoreLabel" destination="dyk-fR-xFA" id="UrX-0F-vw3"/>
+                <outlet property="view" destination="LF0-Ih-Cx0" id="BZE-fH-KSP"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="hGa-jy-X0F">
-            <rect key="frame" x="0.0" y="0.0" width="750" height="400"/>
+        <view contentMode="scaleToFill" id="LF0-Ih-Cx0">
+            <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2r4-Rq-GJX">
-                    <rect key="frame" x="-25" y="-100" width="800" height="600"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mkA-0Z-VCU">
-                            <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
-                            <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain"/>
-                        </button>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="랭킹" translatesAutoresizingMaskIntoConstraints="NO" id="JQG-ka-ysl">
-                            <rect key="frame" x="0.0" y="0.0" width="800" height="600"/>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gjc-jY-e1v">
-                            <rect key="frame" x="500.66666666666674" y="127.33333333333333" width="55" height="27.666666666666671"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="55" id="lJG-3D-4iX"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
-                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="랭킹" translatesAutoresizingMaskIntoConstraints="NO" id="cfC-Qs-aNN">
+                    <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wVV-zu-jlb" userLabel="closeButton">
+                    <rect key="frame" x="365.66666666666669" y="339.66666666666669" width="121" height="28"/>
                     <constraints>
-                        <constraint firstItem="JQG-ka-ysl" firstAttribute="leading" secondItem="2r4-Rq-GJX" secondAttribute="leading" id="3ed-qT-KzM"/>
-                        <constraint firstAttribute="height" constant="600" id="3of-Gf-hri"/>
-                        <constraint firstItem="mkA-0Z-VCU" firstAttribute="top" secondItem="2r4-Rq-GJX" secondAttribute="top" id="8uv-NM-HHT"/>
-                        <constraint firstItem="Gjc-jY-e1v" firstAttribute="centerX" secondItem="2r4-Rq-GJX" secondAttribute="centerX" multiplier="1.32" id="Exh-N3-BAt"/>
-                        <constraint firstItem="mkA-0Z-VCU" firstAttribute="leading" secondItem="2r4-Rq-GJX" secondAttribute="leading" id="G0u-dZ-eYt"/>
-                        <constraint firstAttribute="trailing" secondItem="JQG-ka-ysl" secondAttribute="trailing" id="H5v-kB-zbc"/>
-                        <constraint firstAttribute="bottom" secondItem="JQG-ka-ysl" secondAttribute="bottom" id="Lgl-8t-62P"/>
-                        <constraint firstAttribute="bottom" secondItem="mkA-0Z-VCU" secondAttribute="bottom" id="UxU-8L-D5j"/>
-                        <constraint firstItem="JQG-ka-ysl" firstAttribute="top" secondItem="2r4-Rq-GJX" secondAttribute="top" id="egv-EY-StN"/>
-                        <constraint firstAttribute="width" constant="800" id="hjE-5p-tiH"/>
-                        <constraint firstItem="Gjc-jY-e1v" firstAttribute="centerY" secondItem="2r4-Rq-GJX" secondAttribute="centerY" multiplier="0.47" id="vdk-u6-7rh"/>
-                        <constraint firstAttribute="trailing" secondItem="mkA-0Z-VCU" secondAttribute="trailing" id="zD6-90-mZI"/>
+                        <constraint firstAttribute="width" constant="121" id="LOb-Is-8KW"/>
+                        <constraint firstAttribute="height" constant="28" id="zzM-VY-neJ"/>
                     </constraints>
-                </view>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" backgroundImage="closebutton"/>
+                    <connections>
+                        <action selector="closeButton:" destination="-1" eventType="touchUpInside" id="gRx-Jk-ajp"/>
+                    </connections>
+                </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dyk-fR-xFA" userLabel="scoreLabel">
+                    <rect key="frame" x="550" y="75.666666666666671" width="50" height="14"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="14" id="njw-Hw-bTR"/>
+                        <constraint firstAttribute="width" constant="50" id="xbz-sr-Aoa"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="rqd-Yb-Rhg"/>
-            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+            <viewLayoutGuide key="safeArea" id="0Ys-g7-lND"/>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="2r4-Rq-GJX" firstAttribute="centerY" secondItem="hGa-jy-X0F" secondAttribute="centerY" id="787-kg-egI"/>
-                <constraint firstItem="2r4-Rq-GJX" firstAttribute="centerX" secondItem="hGa-jy-X0F" secondAttribute="centerX" id="wxf-Po-iZk"/>
+                <constraint firstItem="cfC-Qs-aNN" firstAttribute="top" secondItem="LF0-Ih-Cx0" secondAttribute="top" id="5f8-3A-Mnw"/>
+                <constraint firstAttribute="centerX" secondItem="cfC-Qs-aNN" secondAttribute="centerX" id="7Ar-4g-Cpz"/>
+                <constraint firstItem="wVV-zu-jlb" firstAttribute="centerX" secondItem="LF0-Ih-Cx0" secondAttribute="centerX" id="CD5-GQ-Cj0"/>
+                <constraint firstItem="wVV-zu-jlb" firstAttribute="centerY" secondItem="LF0-Ih-Cx0" secondAttribute="centerY" multiplier="1.8" id="CK2-Yj-nxm"/>
+                <constraint firstItem="cfC-Qs-aNN" firstAttribute="leading" secondItem="LF0-Ih-Cx0" secondAttribute="leading" id="Elc-uZ-L3L"/>
+                <constraint firstAttribute="centerX" secondItem="cfC-Qs-aNN" secondAttribute="centerX" id="HIm-c4-bfu"/>
+                <constraint firstItem="dyk-fR-xFA" firstAttribute="centerX" secondItem="LF0-Ih-Cx0" secondAttribute="centerX" multiplier="1.35" id="Hv2-Z3-cRJ"/>
+                <constraint firstAttribute="bottom" secondItem="cfC-Qs-aNN" secondAttribute="bottom" id="Tgg-wO-AW0"/>
+                <constraint firstItem="dyk-fR-xFA" firstAttribute="centerY" secondItem="LF0-Ih-Cx0" secondAttribute="centerY" multiplier="0.42" id="we0-iX-m95"/>
+                <constraint firstAttribute="trailing" secondItem="cfC-Qs-aNN" secondAttribute="trailing" id="wfy-26-Pu3"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="131.8840579710145" y="125.89285714285714"/>
+            <point key="canvasLocation" x="-133.09859154929578" y="959.5419847328244"/>
         </view>
     </objects>
     <resources>
+        <image name="closebutton" width="102" height="30"/>
         <image name="랭킹" width="727" height="550"/>
     </resources>
 </document>
