--- a/Fish-ShapedBunMakingGame/GameView/GameViewController.xib
+++ b/Fish-ShapedBunMakingGame/GameView/GameViewController.xib
@@ -47,9 +47,9 @@
                     <rect key="frame" x="0.0" y="0.0" width="750" height="400"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pPZ-tM-EeE" userLabel="Finished Bread Label">
-                    <rect key="frame" x="602.33333333333337" y="345" width="18" height="30"/>
+                    <rect key="frame" x="571.33333333333337" y="345" width="80" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="18" id="7jz-WR-YzQ"/>
+                        <constraint firstAttribute="width" constant="80" id="7jz-WR-YzQ"/>
                         <constraint firstAttribute="height" constant="30" id="cOT-A2-5L7"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="25"/>
@@ -65,7 +65,7 @@
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="87y-62-66U" userLabel="붕어빵 지급">
-                    <rect key="frame" x="638.66666666666663" y="348" width="50" height="24"/>
+                    <rect key="frame" x="668.66666666666663" y="348" width="50" height="24"/>
                     <color key="backgroundColor" red="0.96006423230000004" green="0.19883376359999999" blue="0.40208739040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="Wgz-yj-eAD"/>
@@ -126,10 +126,10 @@
                     <rect key="frame" x="562" y="95" width="136" height="22"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndM-Ma-8S5" userLabel="scoreLabel">
-                            <rect key="frame" x="120" y="3.3333333333333286" width="11" height="20.666666666666668"/>
+                            <rect key="frame" x="81" y="3.3333333333333286" width="50" height="20.666666666666668"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="20.670000000000002" id="3gi-9t-LU0"/>
-                                <constraint firstAttribute="width" constant="11" id="ben-Nl-Mv3"/>
+                                <constraint firstAttribute="width" constant="50" id="ben-Nl-Mv3"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="17"/>
                             <nil key="textColor"/>
@@ -203,7 +203,7 @@
                             <rect key="frame" x="158" y="118" width="158" height="125"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="붕어빵 빈틀" id="L6z-lh-oGt" userLabel="image6">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="붕어빵 빈틀" id="L6z-lh-oGt" userLabel="image6">
                             <rect key="frame" x="314" y="118" width="162" height="126"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
@@ -300,10 +300,11 @@
             <viewLayoutGuide key="safeArea" id="TK5-hf-k4P"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="a8c-4D-N5e" firstAttribute="centerY" secondItem="5Sj-9k-IQc" secondAttribute="centerY" id="0p2-Fy-jYi"/>
                 <constraint firstItem="dUz-yk-L5L" firstAttribute="centerX" secondItem="VkU-88-xsA" secondAttribute="centerX" multiplier="1.2" id="1Qc-8E-wDu"/>
                 <constraint firstAttribute="trailing" secondItem="Ofm-p0-jV4" secondAttribute="trailing" id="4wR-jk-HQg"/>
                 <constraint firstItem="Ofm-p0-jV4" firstAttribute="leading" secondItem="VkU-88-xsA" secondAttribute="leading" id="4xJ-BE-kri"/>
-                <constraint firstItem="87y-62-66U" firstAttribute="centerX" secondItem="VkU-88-xsA" secondAttribute="centerX" multiplier="1.77" id="5Dn-xY-O73"/>
+                <constraint firstItem="87y-62-66U" firstAttribute="centerX" secondItem="VkU-88-xsA" secondAttribute="centerX" multiplier="1.85" id="5Dn-xY-O73"/>
                 <constraint firstItem="DeF-i8-os0" firstAttribute="centerY" secondItem="VkU-88-xsA" secondAttribute="centerY" multiplier="0.53" id="8cW-Iw-nFg"/>
                 <constraint firstItem="Ofm-p0-jV4" firstAttribute="bottom" secondItem="VkU-88-xsA" secondAttribute="bottom" id="GkM-1C-nyb"/>
                 <constraint firstItem="OXo-gC-tUm" firstAttribute="centerX" secondItem="VkU-88-xsA" secondAttribute="centerX" multiplier="0.95" id="Gmu-wv-AaK"/>
@@ -311,20 +312,31 @@
                 <constraint firstItem="CQ7-jr-ATX" firstAttribute="centerX" secondItem="VkU-88-xsA" secondAttribute="centerX" multiplier="0.7" id="I5c-Ji-MF9"/>
                 <constraint firstItem="e9z-bB-idg" firstAttribute="centerX" secondItem="VkU-88-xsA" secondAttribute="centerX" multiplier="1.688" id="QYZ-e1-2SJ"/>
                 <constraint firstItem="pPZ-tM-EeE" firstAttribute="centerX" secondItem="VkU-88-xsA" secondAttribute="centerX" multiplier="1.63" id="Qi6-0v-0nl"/>
+                <constraint firstItem="xyU-l8-qa5" firstAttribute="centerX" secondItem="5Sj-9k-IQc" secondAttribute="centerX" id="Sng-Lk-GlM"/>
                 <constraint firstItem="Q2Y-CW-5Qo" firstAttribute="centerX" secondItem="VkU-88-xsA" secondAttribute="centerX" multiplier="1.7" id="YFg-Cc-OiX"/>
                 <constraint firstItem="cyG-3r-PEi" firstAttribute="centerY" secondItem="VkU-88-xsA" secondAttribute="centerY" multiplier="0.2" id="YIX-MH-8NV"/>
                 <constraint firstItem="CQ7-jr-ATX" firstAttribute="centerY" secondItem="VkU-88-xsA" secondAttribute="centerY" multiplier="0.23" id="Z1Z-ku-Y7J"/>
                 <constraint firstAttribute="top" secondItem="Ofm-p0-jV4" secondAttribute="top" id="ZCX-wM-eCh"/>
+                <constraint firstItem="BLF-e6-8aD" firstAttribute="centerY" secondItem="5Sj-9k-IQc" secondAttribute="centerY" id="Zmo-Qg-EGH"/>
+                <constraint firstItem="a8c-4D-N5e" firstAttribute="centerX" secondItem="5Sj-9k-IQc" secondAttribute="centerX" id="Zx6-Op-fYA"/>
                 <constraint firstItem="cyG-3r-PEi" firstAttribute="centerX" secondItem="VkU-88-xsA" secondAttribute="centerX" multiplier="0.7" id="aIt-g5-4lm"/>
                 <constraint firstItem="Q2Y-CW-5Qo" firstAttribute="centerY" secondItem="VkU-88-xsA" secondAttribute="centerY" multiplier="1.25" id="cfF-dT-Cd9"/>
                 <constraint firstItem="pPZ-tM-EeE" firstAttribute="centerY" secondItem="VkU-88-xsA" secondAttribute="centerY" multiplier="1.8" id="e5O-Lo-t5b"/>
+                <constraint firstItem="qSI-Wf-a7X" firstAttribute="centerX" secondItem="5Sj-9k-IQc" secondAttribute="centerX" id="eTv-du-KvF"/>
+                <constraint firstItem="qSI-Wf-a7X" firstAttribute="centerY" secondItem="5Sj-9k-IQc" secondAttribute="centerY" id="gEC-7K-mE0"/>
                 <constraint firstItem="e9z-bB-idg" firstAttribute="centerY" secondItem="VkU-88-xsA" secondAttribute="centerY" multiplier="0.35" id="h39-DL-Ghg"/>
                 <constraint firstItem="DeF-i8-os0" firstAttribute="centerX" secondItem="VkU-88-xsA" secondAttribute="centerX" multiplier="1.68" id="hHg-Bo-4fD"/>
                 <constraint firstItem="OXo-gC-tUm" firstAttribute="centerY" secondItem="VkU-88-xsA" secondAttribute="centerY" multiplier="0.52" id="ibi-xL-NhT"/>
                 <constraint firstItem="dUz-yk-L5L" firstAttribute="centerY" secondItem="VkU-88-xsA" secondAttribute="centerY" multiplier="0.52" id="ixM-X7-wHY"/>
                 <constraint firstItem="5Sj-9k-IQc" firstAttribute="centerX" secondItem="VkU-88-xsA" secondAttribute="centerX" multiplier="0.78" id="k1l-Ou-PoE"/>
+                <constraint firstItem="bav-J1-CMQ" firstAttribute="centerX" secondItem="5Sj-9k-IQc" secondAttribute="centerX" id="nr5-RB-tBG"/>
+                <constraint firstItem="xyU-l8-qa5" firstAttribute="centerY" secondItem="5Sj-9k-IQc" secondAttribute="centerY" id="nv5-4s-zdA"/>
                 <constraint firstItem="87y-62-66U" firstAttribute="centerY" secondItem="VkU-88-xsA" secondAttribute="centerY" multiplier="1.8" id="q90-i9-6wR"/>
+                <constraint firstItem="L6z-lh-oGt" firstAttribute="centerX" secondItem="5Sj-9k-IQc" secondAttribute="centerX" id="qdn-bk-gnP"/>
                 <constraint firstItem="5Sj-9k-IQc" firstAttribute="centerY" secondItem="VkU-88-xsA" secondAttribute="centerY" multiplier="1.4" id="sEZ-2u-zxr"/>
+                <constraint firstItem="L6z-lh-oGt" firstAttribute="centerY" secondItem="5Sj-9k-IQc" secondAttribute="centerY" id="vEp-M8-j7v"/>
+                <constraint firstItem="BLF-e6-8aD" firstAttribute="centerX" secondItem="5Sj-9k-IQc" secondAttribute="centerX" id="wkq-NQ-W4n"/>
+                <constraint firstItem="bav-J1-CMQ" firstAttribute="centerY" secondItem="5Sj-9k-IQc" secondAttribute="centerY" id="xW6-r8-ge3"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="639.69465648854964" y="-25.35211267605634"/>
