붕어빵 order 받아서 → 붕어빵 굽고 → 붕어빵 지급 (게임 메인 타이머, 결과 창까지 코드 구현 완료)

--- a/Fish-ShapedBunMakingGame/GameEndView/GameEndViewController.xib
+++ b/Fish-ShapedBunMakingGame/GameEndView/GameEndViewController.xib
@@ -18,7 +18,7 @@
             <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="랭킹" translatesAutoresizingMaskIntoConstraints="NO" id="cfC-Qs-aNN">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="랭킹" translatesAutoresizingMaskIntoConstraints="NO" id="cfC-Qs-aNN" customClass="GameEndViewController">
                     <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wVV-zu-jlb" userLabel="closeButton">
